# learn_tdd_cpp

./: CMakeLists.txt  README.MD  Soundex.h  conanfile.txt
tests/: CMakeLists.txt  SoundexTest.cpp  cppu_main.cpp  test_main.cpp
